--- a/test/Regis.Pay.EventConsumer.ComponentTests/Regis.Pay.EventConsumer.ComponentTests.csproj
+++ b/test/Regis.Pay.EventConsumer.ComponentTests/Regis.Pay.EventConsumer.ComponentTests.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\..\src\Regis.Pay.EventConsumer\Regis.Pay.EventConsumer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Consumers\" />
+  </ItemGroup>
+
 </Project>
