--- a/src/Regis.Pay.Application/Regis.Pay.Application.csproj
+++ b/src/Regis.Pay.Application/Regis.Pay.Application.csproj
@@ -11,11 +11,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="App.Metrics.Abstractions" Version="4.3.0" />
     <PackageReference Include="Mediator.SourceGenerator" Version="3.0.*">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Mediator.Abstractions" Version="3.0.*" />
+    <PackageReference Include="OpenTelemetry" Version="1.11.2" />
   </ItemGroup>
 
 </Project>
